# rpgelsewhere

./: .env.example  .gitignore  AGENTS.md  README.md  TODO.md  docker-compose.yml  justfile
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_entries_table.py  0002_add_edition_column.py
backend/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: entries.py
backend/scripts/: evaluate_completeness.py  export_entries.py  scrape_commoncrawl.py  scrape_sitemap.py
data/: overrides.csv
docs/: additional-data-sources.md  architectural-decision-record.md  common-crawl.md  sitemap-scraping.md  srd-completeness.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: entries.json
frontend/src/: App.tsx  index.css  theme.ts  types.ts
frontend/src/api/: auth.ts  entries.ts
frontend/src/components/: AboutModal.tsx  SearchBox.tsx  SearchResult.tsx
frontend/src/hooks/: useAuth.ts  useEntries.ts  useSearch.ts  useTheme.test.tsx  useTheme.ts
frontend/src/pages/: AdminPage.tsx  SearchPage.tsx
frontend/src/search/: scoring.test.ts  scoring.ts  search.ts
