[project]
name = "rpgelsewhere-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "warcio>=1.7.5",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
